--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,16 +10,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".swustsc.SWUSTSCNewsActivity" />
-        <activity android:name=".main.WelcomeActivity" />
-        <activity android:name=".swustsc.NewsPageActivity" />
-        <activity android:name=".main.HomeActivity">
+        <activity android:name=".swustsc.SWUSTSCNewsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".main.WelcomeActivity" />
+        <activity android:name=".swustsc.NewsPageActivity" />
+        <activity android:name=".main.HomeActivity"></activity>
         <activity android:name=".baijia.BaiJiaNewsListActivity"></activity>
     </application>
 
